[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jini-prediction-engine"
version = "0.32.0"
requires-python = ">=3.9"
description = "Jini quantitative signal pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"
